--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -49,7 +49,10 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="/accounts/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/accounts/signup">Sign Up</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
