--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -6,13 +6,21 @@
 {% endblock %}
 
 {% block content %}
-<form class="form-signin mt-5">
+<form class="form-signin mt-5" method="POST" action="{% url 'login' %}">
+    {% csrf_token %}
     <!-- <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> -->
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+
+    {% if status < 0 %}
+    <div class="alert alert-danger" role="alert">
+        로그인에 실패했습니다.
+    </div>
+    {% endif %}
+
+    <label for="inputEmail" class="sr-only">User Name</label>
+    <input type="text" name="username" id="username" class="form-control" placeholder="User Name" required="" autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+    <input type="password" name="password" id="password" class="form-control" placeholder="Password" required="">
     
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     <div class="checkbox mt-3 mb-3 text-center">
