--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,15 +6,23 @@
 {% endblock %}
 
 {% block content %}
-<form class="form-signin mt-5">
+<form class="form-signin mt-5" method="POST" action="{% url 'signup' %}">
+    {% csrf_token %}
     <!-- <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> -->
     <h1 class="h3 mb-3 font-weight-normal">Please Sign Up</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+
+    {% if status < 0 %}
+    <div class="alert alert-danger" role="alert">
+        비밀번호가 일치하지 않습니다
+    </div>
+    {% endif %}
+
+    <label for="inputEmail" class="sr-only">username</label>
+    <input type="text" name="username" id="inputEmail" class="form-control" placeholder="User Name" required="" autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control pw-check-1" placeholder="Password" required="">
-    <label for="inputPassword2" class="sr-only">Password</label>
-    <input type="password" id="inputPassword2" class="form-control pw-check-2" placeholder="Password check" required="">
+    <input type="password" name="password1" id="inputPassword" class="form-control pw-check-1" placeholder="Password" required="">
+    <label for="inputPassword2" class="sr-only">Password Check</label>
+    <input type="password" name="password2" id="inputPassword2" class="form-control pw-check-2" placeholder="Password check" required="">
     
     <button class="btn btn-lg btn-success btn-block" type="submit">Sign Up</button>
     <div class="checkbox mt-3 mb-3 text-center">
