--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -71,8 +71,12 @@
                     _comment.get();
                 })
             },
-            update : function(){ console.log('comment update'); },
-            delete : function(){ console.log('comment delete'); }
+            update : function(){ 
+                console.log('comment update'); 
+            },
+            delete : function(){ 
+                console.log('comment delete'); 
+            }
         }
     })();
 </script>
@@ -90,8 +94,12 @@
         {{ post.body }}
     </div>
     <div class="text-right">
-        <a href="javascript:console.log('update')">수정하기</a>
-        <a href="javascript:console.log('delete')">삭제하기</a>
+        {% if user.is_authenticated %}
+            {% if post.writer == user.username %}
+        <a href="/blog/update/{{post.pk}}">수정하기</a>
+        <a href="/blog/delete/{{post.pk}}">삭제하기</a>
+            {% endif %}
+        {% endif %}
         <a href="../">목록으로</a>
     </div>
     <hr>
@@ -120,10 +128,17 @@
                 <p class='comment-content'>
                     {{ comment.content }}
                 </p>
+                {% if user.is_authenticated %}
+                    
                 <div class="text-right comment-edit">
-                    <a href="javascript:_comment.update()">수정하기</a>
-                    <a href="javascript:_comment.delete()">삭제하기</a>
+                    {% if comment.writer == user.username %}
+                    <a href="#">수정하기</a>
+                    <a href="/blog/comment/delete/{{ comment.pk }}">삭제하기</a>
+                    {% elif comment.writer != user.username and post.writer == user.username %}
+                    <a href="/blog/comment/delete/{{ comment.pk }}">삭제하기</a>
+                    {% endif %}
                 </div>
+                {% endif %}
                 <p class='comment-writer text-right'>
                     {{ comment.writer }} | {{ comment.date }}
                 </p>
