--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -87,7 +87,7 @@
 <div class="detail container">
     <div class="detail-header mt-5">
         <h2 >{{ post.title }}</h2>
-        <p class='text-right'>{{ post.pub_date }} | {{ post.writer }}</p>
+        <p class='text-right'>{{ post.writer }} | {{ post.pub_date }}</p>
     </div>
     <hr>
     <div class="detail-content mt-5 mb-5">
