--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -72,19 +72,17 @@
                     </li>
                     {% endif %}
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input
-                        class="form-control mr-sm-2"
-                        type="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                    />
-                    <button
-                        class="btn btn-outline-success my-2 my-sm-0"
-                        type="submit"
-                    >
-                        Search
-                    </button>
+                <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
+                    <div class="input-group">
+                        <select class="custom-select" name="search_filter" id="inputGroupSelect04" aria-label="Example select with button addon">
+                            <option value="title">Title</option>
+                            <option value="body">Body</option>
+                        </select>
+                        <input type="text" name="q" class='form-control'>
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </nav>
