--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -13,10 +13,10 @@
         <div class='header-content'>
             <div class='container'>
                 <p class='text-center header-title'>
-                    <span class='import'>import</span> { <span class='variable'>logs</span> } <span class='import'>from</span> <span class='module'>'gomja'</span>;
+                    <span class='import'>import</span> { <span class='variable'>logs</span> } <span class='import'>from</span> <span class='module'>'Sahmyook'</span>;
                 </p>
                 <p class='text-center text-success mt-5'>
-                    // 웹 개발과 iOS 개발을 공부중인 학생입니다.
+                    // 웹 개발과 iOS 개발을 공부중인 팀입니다.
                 </p>
                 <p class='text-center text-success'>
                     // 개발하는 중에, 그리고 공부하면서 얻은 것들을 정리해둡니다.
