--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -28,7 +28,7 @@
     <body>
         <!-- navbar 시작 -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'home' %}">Gomja.log</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Sahmyook.log</a>
             <button
                 class="navbar-toggler"
                 type="button"
